# flask-careers-portal

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: tests.yml
static/: styles.css
templates/: base.html  footer.html  home.html  jobitem.html  nav.html
tests/: test_app.py
